# modeler

./: .gitignore  CMakeLists.txt  README.md
include/: AST.h  CPN.h  StateSpace.h  common.h  test1.h
solc_files/: 1_SimpleDAO.sol  Purchase.sol  Purchase.solc  SafeMath.sol  SimplePaymentChannel.sol  Timelock.sol  readme.txt  scripts.py  storage property.sol  storage.sol  storage.solc
solc_files/iniFile/: Purchase.ini  SafeMath.ini  __Template.ini  integer_overflow_1.ini  integer_overflow_add.ini  integer_overflow_benign_1.ini  integer_overflow_minimal.ini  integer_overflow_mul.ini  integer_overflow_multitx_multifunc_feasible.ini  integer_overflow_multitx_onefunc_feasible.ini  overflow_simple_add.ini  overflow_single_tx.ini  storage.ini
solc_files/old/: Ballot.sol  ReceiverPays.sol  SafeMath.sol  SimpleAution.sol
solc_files/output/: combined.json
solc_files/output/1_SimpleDAO/: combined.json
solc_files/output/Ballot/: combined.json
solc_files/output/Purchase/: combined.json
solc_files/tests/: Purchase.sol  SafeMath.sol  integer_overflow_1.sol  integer_overflow_add.sol  integer_overflow_benign_1.sol  integer_overflow_minimal.sol  integer_overflow_mul.sol  integer_overflow_multitx_multifunc_feasible.sol  integer_overflow_multitx_onefunc_feasible.sol  overflow_simple_add.sol  overflow_single_tx.sol  storage.sol
src/: AST.cpp  CMakeLists.txt  CPN.cpp  Expression.cpp  StateSpace.cpp  common.cpp  main.cpp  run.py  stat_1.py  test.cpp
test/: CMakeLists.txt  test_common.cpp
testset/: Purchase.solc  readme.txt
testset/output/: combined.json
(+18 files in other folders)
